# Desurium

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  README  README.cmake  README.md  build.sh  build_cmake.bat  build_cmake.sh  build_cmake_clean.sh  build_desura.bat  build_desura.sh  build_desura_vis.bat  build_make_clean.sh  env.sh  find_missing_copyright_notes.sh  getceflibs.sh  index.html  install-deps.sh  install_deps.sh  params.json  run_desura.sh  run_desurium.sh  run_gtest.bat
build_out/: CMakeLists.txt  copy_data.bat  copy_data.sh  findlib.sh  run.sh
build_out/data/: ca-bundle_win.crt  cef_data_lin.pak
build_out/data/bindings/: host_binding.js  installer_binding_fs.js  installer_binding_item.js  installer_binding_item_service.js  installer_binding_item_user.js  installer_binding_os.js  native_binding.js  native_binding_branchinfo.js  native_binding_events.js  native_binding_iteminfo.js  native_binding_links.js  native_binding_settings.js  native_binding_uploadinfo.js  native_binding_userinfo.js
build_out/data/language/: New Language Read Me.txt  brazilian-portuguese.xml  brazilian-portuguese_utility.xml  bulgarian.xml  bulgarian_utility.xml  czech.xml  english.xml  english_utility.xml  esperanto.xml  esperanto_utility.xml  finnish.xml  finnish_utility.xml  french.xml  french_utility.xml  german.xml  german_utility.xml  greek.xml  greek_utility.xml  hungarian.xml  hungarian_utility.xml  italian.xml  italian_utility.xml  japanese.xml  japanese_utility.xml  polish.xml  polish_utility.xml  russian.xml  russian_utility.xml  slovenian.xml  slovenian_utility.xml  spanish.xml  spanish_utility.xml
build_out/release_lin/: desura
build_out/release_lin/docs/: LICENSES  README
cmake/tests/wxWidget_2.9_test/: CMakeLists.txt  wxWidget_2.9_test.cpp
src/: CMakeLists.txt  common.gypi
src/branding_default/: CMakeLists.txt  branding.h  desura_browserhost.rc2  desura_service.rc2  servicecore.rc2  webcore.rc2
src/branding_default/sources/: icon_template.xcf
src/branding_desura/: branding.h  crashuploader_version.h  desura_browserhost_version.h  desura_exe_version.h  desura_service_version.h  mcfcore_version.h  scriptcore_version.h  servicecore_version.h  uicore.rc2  uicore_version.h  usercore_version.h  utilcore_version.h  utility.rc2  webcore_version.h
src/branding_desurium/: CMakeLists.txt  branding.h  crashuploader.rc2  desura.icns  desura_exe.rc2  mcfcore.rc2  scriptcore.rc2  toolhelper.rc2  usercore.rc2  utilcore.rc2
src/branding_desurium/sources/: icon_16_template.xcf  icon_template.xcf  licence.txt
src/cmake/: BuildGoogleBreakpad.cmake  BuildwxWidgets.cmake  FindGoogleBreakpad.cmake
src/common/: CMakeLists.txt  Common.cpp  Common.h  LogBones.cpp  LogBones.h  gcJSBase.cpp  gcJSBase.gyp  gcJSBase.h  service_pipe.gypi
src/common/browser_pipe/: CMakeLists.txt  IPCBrowser.cpp  IPCBrowser.h
src/common/service_pipe/: CMakeLists.txt  IPCComplexLaunch.cpp  IPCComplexLaunch.h  IPCInstallMcf.cpp  IPCInstallMcf.h  IPCServiceMain.cpp  IPCServiceMain.h  IPCUninstallBranch.cpp  IPCUninstallBranch.h  IPCUninstallMcf.cpp  IPCUninstallMcf.h  IPCUpdateApp.cpp  IPCUpdateApp.h
src/common/tool_pipe/: CMakeLists.txt  IPCToolMain.cpp  IPCToolMain.h
src/data/: CMakeLists.txt  util.sh
src/executable/bittest/: CMakeLists.txt
src/executable/bittest_lin/: bittest_lin.gyp
src/executable/bootloader_lin/: CMakeLists.txt  bootloader_lin.gyp
src/executable/bootloader_mac/: CMakeLists.txt
src/executable/bootloader_win/: CMakeLists.txt  desura.vcxproj  desura.vcxproj.filters
src/executable/crashdlg_lin/: CMakeLists.txt  crashdlg_lin.gyp
src/executable/desura_browserhost/: CMakeLists.txt  desura_browserhost.vcxproj  desura_browserhost.vcxproj.filters
src/executable/dumpgen_win/: CMakeLists.txt
src/executable/service_win/: CMakeLists.txt  service.vcxproj  service.vcxproj.filters
src/executable/toolhelper/: CMakeLists.txt  toolhelper.vcxproj  toolhelper.vcxproj.filters
src/executable/utilhelper/: CMakeLists.txt  utility.vcxproj  utility.vcxproj.filters
src/executable_nongpl/bootloader_win/: desura_nongpl.vcxproj
src/include/: BZip2.h  BaseManager.h  Color.h  DesuraId.h  Event.h  IPCServerI.h  LogCallback.h  MainAppI.h  MiniDumpGenerator.h  ScriptCoreI.h  ServiceCoreI.h  SharedObjectLoader.h  UICoreI.h  UtilBootloader.h  XMLMacros.h  gcError.h
src/include/managers/: CVar.h  ConCommand.h  Managers.h  WildcardDelegate.h  WildcardManager.h
src/include/mcfcore/: DownloadProvider.h  MCFDPReporterI.h  MCFFileI.h  MCFHeaderI.h  MCFI.h  MCFMain.h  ProgressInfo.h  UserCookies.h
src/include/sql/: CustomInstallPathSql.h  GameExplorerSql.h  ItemInfoSql.h  McfUploadSql.h  ToolManagerSql.h  WebCoreSql.h
src/include/umcf/: UMcf.h  UMcfFile.h  UMcfHeader.h
src/include/usercore/: BranchInfoI.h  CDKeyManagerI.h  CIPInfo.h  CIPManagerI.h  DownloadInfo.h  GuiDownloadProvider.h  InstallInfoI.h  ItemHandleI.h  ItemHelpersI.h  ItemInfoI.h  ItemManagerI.h  MCFThreadI.h  NewsItem.h  ToolManagerI.h  UploadInfo.h  UploadInfoThreadI.h  UploadManagerI.h  UserCoreI.h  UserServiceI.h  UserThreadI.h  UserThreadManagerI.h  VerifyComplete.h
src/include/util/: MD5Progressive.h  UtilCallback.h  UtilCrypto.h  UtilFs.h  UtilFsPath.h  UtilLinux.h  UtilMacos.h  UtilMisc.h  UtilOs.h  UtilString.h  UtilWeb.h  UtilWindows.h  gcBuff.h  gcDDE.h  gcString.h
src/include/util_thread/: BaseThread.h  ReadWriteMutex.h  ThreadPool.h
src/include/webcore/: DLLVersion.h  DownloadImageInfo.h  DumpInfo.h  ResumeUploadInfo.h  WebCoreI.h
src/include/wx_controls/: gcButton.h  gcCheckBox.h  gcChoice.h  gcCombo.h  gcControls.h  gcCustomFrame.h  gcCustomFrameButtons.h  gcCustomFrameImpl.h  gcCustomFrameMove.h  gcCustomFrameResize.h  gcCustomMenu.h  gcDialog.h  gcFlickerFreePaint.h  gcFrame.h  gcGrid.h  gcHyperlinkCtrl.h  gcImage.h  gcImageButton.h  gcImageControl.h  gcImageHandle.h  gcImgButtonCount.h  gcManagers.h  gcMessageBox.h  gcPanel.h  gcProgressBar.h  gcRadioButton.h  gcScrolledWindow.h  gcSpinnerProgBar.h  gcTaskBar.h  (+9 more)
src/shared_nongpl/: readme.txt
src/tests/: CMakeLists.txt  helper_functions.h
(+1030 files in other folders)
